--- a/docs/05-conditionals/53-if-statement.org
+++ b/docs/05-conditionals/53-if-statement.org
@@ -36,4 +36,92 @@ alert('División: ' + num/den);
 
 El diagrama de flujo correspondiente sería el siguiente:
 
-[[../../static/img/if-sentence-example.drawio.png]]
+[[../../static/img/if-sentence-example-1.drawio.png]]
+
+** Ejercicios
+
+1. 📝 Dibuja el diagrama de flujo correspondiente al siguiente fragmento de código:
+
+  #+begin_src javascript
+let x = 5;
+if (x < 0) {
+  document.write("Negativo");
+}
+  #+end_src
+
+2. 📝 Dibuja el diagrama de flujo correspondiente al siguiente fragmento de código:
+
+  #+begin_src javascript
+let x = prompt("Escriba un número");
+if (x < 0) {
+  x = -x;
+}
+document.write(x);
+  #+end_src
+
+3. 📝 💻 Escribe el código correspondiente al siguiente diagrama de flujo:
+
+   [[../../static/img/ticbook4-ej5.3.3.drawio.png]]
+
+4. 📝 💻 Escribe el código correspondiente al siguiente diagrama de flujo:
+
+   [[../../static/img/ticbook4-ej5.3.4.drawio.png]]
+
+5. 📝 Dibuja el diagrama de flujo correspondiente al siguiente fragmento de código:
+
+  #+begin_src javascript
+let x = prompt("Su número");
+if (x < 0) {
+  document.write("Negativo");
+}
+if (Math.abs(x) > 100) {
+  document.write("Tres cifras");
+}
+  #+end_src
+
+6. 📝 Dibuja el diagrama de flujo correspondiente al siguiente fragmento de código:
+
+  #+begin_src javascript
+let x = prompt("Su número");
+if (x < 1) {
+  document.write("Pequeño");
+  if (x > -1) {
+    document.write("Valor absoluto menor que 1");
+  }
+}
+  #+end_src
+
+7. 📝 Dibuja el diagrama de flujo correspondiente al siguiente fragmento de código:
+
+  #+begin_src javascript
+let x = 5;
+if (x < 0) {
+  document.write("Negativo");
+}
+  #+end_src
+
+8. 📝 💻 ¿Qué número aparecerá en la consola al ejecutar el siguiente código?
+  #+begin_src javascript
+let x = 3;
+if (x < 5) {
+  x = x + 1;
+  if (x > 10) {
+    x = 2*x;
+  }
+  x = x - 1;
+}
+console.log(x);
+#+end_src
+
+9. 📝 💻 ¿Qué número aparecerá en la consola al ejecutar el siguiente código?
+
+  #+begin_src javascript
+let x = 3;
+if (x < 5) {
+  x = 5*x;
+}
+if (x > 10) {
+  x = x - 1;
+}
+console.log(x);
+  #+end_src
